--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,22 +1,19 @@
 .custom-hd {
     /* position:fixed; */
     /* bottom:0; */
-    width:90%;
+    width:100%;
     background-color: #F000FF;
     border: solid #F0F030;
     border-radius: 0.3rem;
     margin-bottom: 5%;
     margin-top: 2%;
-    height: 50px;
+    height: 65px;
     /* justify-content: center; */
-    display: flex;
+    /* display: flex; */
     align-items: center;
 }
 
 .header-logo {
-    display: flex;
-    justify-content: end;
-    margin-left: 8%;
     height: 32px;
     width: 125px;
 }
@@ -24,4 +21,31 @@
 header {
     display: flex;
     justify-content: center;
-    }  
+}  
+
+.header-div {
+    /* display: flex; */
+    justify-items: flex-end;
+    /* align-items: center;  */
+    text-align: right;
+}
+
+.test {
+    border-radius: 0.8rem;
+}
+
+@media screen and (max-width: 576px){
+
+}
+
+@media screen and (max-width: 768px){
+
+}
+
+@media screen and (max-width: 992px){
+   
+}
+
+@media screen and (max-width: 1200px){
+
+}
