--- a/src/components/GroupMap/style.css
+++ b/src/components/GroupMap/style.css
@@ -1,4 +1,18 @@
+#map-wrapper {
+	position: relative;
+}
+
 #map {
 	width: 100%;
 	height: 100vh;
+}
+
+#map-progress {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 6px;
+	background: rgba(0, 60, 136, 0.4);
+	width: 0;
+	transition: width 250ms;
 }
