tested multiple items/features, got modal working

--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,5 @@
 body {
   background-image: url("/images/splat-dark.jpg");
   background-size: auto;
-  background-position: center;;
+  background-position: center;
 }
