--- a/src/components/ModalLogin/style.css
+++ b/src/components/ModalLogin/style.css
@@ -3,6 +3,8 @@
     border: solid #1890F0;
     color: #1890F0;
     border-radius: 30rem;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
 }
 
 .modal-background {
