created group mgmt page, tweaked styling/naming conventions across header/buttons/modals, added route to test group mgmt page

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -30,8 +30,11 @@ header {
     text-align: right;
 }
 
-.test {
+.header-test {
     border-radius: 0.8rem;
+    color: #1890F0;
+    border: solid #1890F0;
+    background-color: #481848;
 }
 
 @media screen and (max-width: 576px){
