finished banner and added margin to rounded button

--- a/src/components/RoundedButton/style.css
+++ b/src/components/RoundedButton/style.css
@@ -3,6 +3,5 @@
     border: solid #1890F0;
     background-color: #481848;
     border-radius: 30rem;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin: 1%;
 }
