tweaked styling on groupMgmtPage and on modal delete, added dummy data on groupMgmtPage buttons

--- a/src/components/GroupMgmtPage/style.css
+++ b/src/components/GroupMgmtPage/style.css
@@ -10,6 +10,5 @@
     margin: 0 auto;
     border: solid thin #1890F0;
     background-color: #F0309099;
-    /* display: flex; */
-    /* justify-content: center; */
+    padding: 1%;
 }
