--- a/src/components/CreateGroupPage/style.css
+++ b/src/components/CreateGroupPage/style.css
@@ -17,13 +17,31 @@
     margin-left: 1%;
 }
 
-.form-test {
+.form-test1 {
+    background-color: #F0309003;
+    color: white;
+    width: 50%;
+    margin: 2%;
+}
+.form-test2 {
     background-color: #F0309003;
     color: white;
     width: 99%;
+    height: 75%
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: 	#ffffff80;
+    opacity: 1; /* Firefox */
+  }
+
 .pin-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.add-person-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
