--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@
 }
 
 body {
-  background-image: url("/images/splat-dark.jpg");
+  background-image: url("/images/color-dots-cropped.jpg");
+  /* background-color: #481848; */
   background-size: auto;
   background-position: center;
 }
