--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -9,7 +9,7 @@ html, body {
     bottom:0;
     /* left:0; */
     width:100%;
-    background-color: #F000FF69;
+    background-color: #265df0;
     border: solid #1890F0;
     border-radius: 0.3rem;
     margin-bottom: 0.5%;
