--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -9,7 +9,7 @@
 .logo-circle {
     height: 150px;
     width: 265px;
-    background-color: #F000FFD4;
+    background-color: #265df0;
     border-radius: 50%;
     border: solid #1890F0;
     display: inline-block;
