--- a/src/components/ModalDelete/style.css
+++ b/src/components/ModalDelete/style.css
@@ -1,6 +1,6 @@
 .external-delete-button {
     background-color: #481848;
-    border: solid #1890F0;
+    border: solid orange;
     color: #ff0000;
     border-radius: 30rem;
     margin: 10%;
