--- a/src/components/buttonRounded/style.css
+++ b/src/components/buttonRounded/style.css
@@ -1,6 +1,6 @@
 .skatter-btn-rnd {
-    color: #1890F0;
-    border: solid #1890F0;
+    color: whitesmoke;
+    border: solid orange;
     background-color: #481848;
     border-radius: 30rem;
     margin: 1%;
