--- a/src/components/ModalLogOut/style.css
+++ b/src/components/ModalLogOut/style.css
@@ -1,6 +1,6 @@
 .external-delete-button {
     background-color: #481848;
-    border: solid #1890F0;
+    border: solid orange;
     color: #ff0000;
     border-radius: 30rem;
     margin: 10%;
@@ -11,13 +11,13 @@
 }
 
 .confirm-delete-button {
-    color: #1890F0;
-    border: solid #1890F0;
+    color: whitesmoke;
+    border: solid orange;
     background-color: #481848;
 }
 
 .cancel-delete-button {
     color: red;
-    border: solid #1890F0;
+    border: solid orange;
     background-color: #481848;
 }
