--- a/src/components/buttonSquare/style.css
+++ b/src/components/buttonSquare/style.css
@@ -1,7 +1,9 @@
 .skatter-btn-sq {
-    color: #1890F0;
-    border: solid #1890F0;
+    color: whitesmoke;
+    border: solid orange;
     background-color: #481848;
     margin-top: 1%;
     margin-bottom: 1%;
+    border-radius: 15px;
+    /* box-shadow: yellow; */
 }
