Hid copyright on map. Fixed some props not being passed in App.js. Implemented pulling users and interest points from database on group map. Implemented map button for enabling/disabling tracking, and it saves the preference in the database for when you reload the map. Implemented map button to go back to the group. Linked View Group button to the map.

--- a/src/components/GroupMap/style.css
+++ b/src/components/GroupMap/style.css
@@ -56,3 +56,13 @@
 	top: 2px;
 	right: 8px;
 }
+
+#map-view-group-page-control {
+	bottom: 40px;
+	left: .5em;
+}
+
+#map-location-control {
+	top: 294px;
+	left: .5em;
+}
