--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -9,15 +9,15 @@ html, body {
     bottom:0;
     /* left:0; */
     width:100%;
-    background-color: #265df0;
-    border: solid #1890F0;
+background-color: #180517a8;
+    border: solid #481848;
     border-radius: 0.3rem;
     margin-bottom: 0.5%;
-    height: 22px;
+    height: 35px;
     justify-content: center;
     display: flex;
     align-items: center;
-    color: white;
+    color: rgba(245, 245, 245, 0.527);
 }
 
 .footer-text {
