--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -9,9 +9,9 @@
 .logo-circle {
     height: 150px;
     width: 265px;
-    background-color: #265df0;
+    background-color: #180517d8;
+    border: solid #481848;
     border-radius: 50%;
-    border: solid #1890F0;
     display: inline-block;
     justify-content: center;
     display: flex;
@@ -21,7 +21,7 @@
   .logo-text {
     /* justify-content: center; */
     /* display: flex; */
-    /* align-items: center; */
+    /* align-items: left; */
     height: 65px;
     width: 200px;
   }
