--- a/src/components/ModalLogin/style.css
+++ b/src/components/ModalLogin/style.css
@@ -1,18 +1,18 @@
 .external-modal-button {
     background-color: #481848;
-    border: solid #1890F0;
-    color: #1890F0;
+    border: solid orange;
+    color: whitesmoke;
     border-radius: 30rem;
     margin-top: 1.5%;
     margin-bottom: 1.5%;
 }
 
 .modal-background {
-    background-color: #F000FF33;
+  background-color: rgba(0, 0, 139, 0.596);
 }
 
 .internal-modal-button {
-    color: #1890F0;
-    border: solid #1890F0;
+      border: solid orange;
+    color: whitesmoke;
     background-color: #481848;
 }
