--- a/src/components/ModalLogin/style.css
+++ b/src/components/ModalLogin/style.css
@@ -3,8 +3,8 @@
     border: solid orange;
     color: whitesmoke;
     border-radius: 30rem;
-    margin-top: 1.5%;
-    margin-bottom: 1.5%;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .modal-background {
