--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -6,7 +6,7 @@
     height: 30px;
     margin: 0 auto;
     border-radius: 0.3rem;
-    margin-bottom: 1%;
+    margin-bottom: 8px;
 }
 
 .banner-text {
