--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -12,7 +12,7 @@ html, body {
 background-color: #180517a8;
     border: solid #481848;
     border-radius: 0.3rem;
-    margin-bottom: 0.5%;
+    margin-bottom: 8px;
     height: 35px;
     justify-content: center;
     display: flex;
