--- a/src/components/GuestLoginPage/style.css
+++ b/src/components/GuestLoginPage/style.css
@@ -2,7 +2,7 @@
     color: whitesmoke;
     background-color: rgba(0, 0, 0, 0.76);
     border-radius: 15px;
-    padding: 5%;
+    padding: 16px;
     border: solid thin #481848;
-    margin: 5%;
+    margin: 16px;
 }
