--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -1,9 +1,9 @@
 .logo-wrapper {
-    margin-top: 5%;
+    margin-top: 32px;
     justify-content: center;
     display: flex;
     align-items: center;
-    margin-bottom: 3%;
+    margin-bottom: 16px;
 }
 
 .logo-circle {
