--- a/src/components/buttonSquare/style.css
+++ b/src/components/buttonSquare/style.css
@@ -2,8 +2,8 @@
     color: whitesmoke;
     border: solid orange;
     background-color: #481848;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-top: 8px;
+    margin-bottom: 8px;
     border-radius: 15px;
     /* box-shadow: yellow; */
 }
