--- a/src/components/GroupPage/style.css
+++ b/src/components/GroupPage/style.css
@@ -7,7 +7,7 @@
     color: whitesmoke;
     /* display: flex; */
     /* justify-content: center; */
-    margin-bottom: 10%;
+    margin-bottom: 32px;
     /* margin-top: 5%; */
     text-align: left;
     padding: 25px;
@@ -18,19 +18,19 @@
     color: white;
     display: flex;
     align-items: flex-start;
-    margin-left: 1%;
+    margin-left: 8px;
 }
 
 .form-test1 {
     background-color:rgb(72, 24, 72);;
     color: white;
     width: 50%;
-    margin: 2%;
+    margin: 8px;
 }
 .form-test2 {
     background-color: rgb(72, 24, 72);
     color: white;
-    width: 99%;
+    width: 100%;
     height: 75%
 }
 
@@ -61,7 +61,7 @@
     /* justify-content: space-around; */
     align-items: flex-end;
     height: auto;
-    margin-top: 10%
+    margin-top: 16px;
 }
 
 .bottom-btn-container2 {
@@ -69,7 +69,7 @@
     /* justify-content: space-around; */
     align-items: flex-end;
     height: auto;
-    margin-top: 10%
+    margin-top: 16px;
 }
 
 .ind-group-title {
