add 'member' and 'point of Int' button to 'edit group' page

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
   flex-grow: 1;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .form-group {
