--- a/src/components/GroupPage/style.css
+++ b/src/components/GroupPage/style.css
@@ -51,6 +51,10 @@
     justify-content: space-evenly;
 }
 
+.add-person-button {
+    margin: 5px 0px;
+}
+
 .bottom-container-test {
     display: flex;
     justify-content: space-evenly;
