changing the button styles and looks

--- a/src/components/ModalDelete/style.css
+++ b/src/components/ModalDelete/style.css
@@ -12,7 +12,7 @@
 
 .confirm-delete-button {
     color: #1890F0;
-    border: solid #1890F0;
+    border-color: #481848;
     background-color: #481848;
 }
 
