--- a/src/components/ModalLogin/style.css
+++ b/src/components/ModalLogin/style.css
@@ -9,10 +9,11 @@
 
 .modal-background {
     background-color: #F000FF33;
+    
 }
 
 .internal-modal-button {
-    color: #1890F0;
-    border: solid #1890F0;
+    color: whitesmoke;
+    border-color: #481848;
     background-color: #481848;
 }
