--- a/src/components/ModalAddPerson/style.css
+++ b/src/components/ModalAddPerson/style.css
@@ -10,8 +10,14 @@
     background-color: #F000FF33;
 }
 
-.confirm-delete-button {
+.internal-modal-button {
+    color: #1890F0;
+    border: solid #1890F0;
+    background-color: #481848;
+}
+
+.confirm-add-button {
     color: whitesmoke;
-    border: solid orange;
+    border-color: #481848;
     background-color: #481848;
 }
