button styling finished, colors/text styling done

--- a/src/components/ModalSignUp/style.css
+++ b/src/components/ModalSignUp/style.css
@@ -3,6 +3,7 @@
   border: solid orange;
     color: whitesmoke;
     border-radius: 30rem;
+    border-width: 1rem;
     margin-top: 8px;
     margin-bottom: 8px;
 }
