--- a/src/components/ModalLogOut/style.css
+++ b/src/components/ModalLogOut/style.css
@@ -1,33 +1,11 @@
-.external-delete-button {
-    background-color: #481848;
-    border: solid orange;
-    color: #ff0000;
-    border-radius: 30rem;
-    margin: 8px;
-}
 
-.modal-background {
-    background-color: rgba(0, 0, 139, 0.596);
-}
-
-.confirm-delete-button {
-    color: whitesmoke;
-    border: solid orange;
-    background-color: #481848;
-}
-
-.cancel-delete-button {
-    color: red;
-    border: solid orange;
-    background-color: #481848;
-}
 .confirm-log-out-button {
     color: whitesmoke;
-    border-color: #481848;
+    border-color: orange;
     background-color: #481848;
 }
 .cancel-log-out-button {
     color: whitesmoke;
-    border-color: #481848;
+    border-color: orange;
     background-color: #481848;
 }
