--- a/src/components/buttonTutorial/style.css
+++ b/src/components/buttonTutorial/style.css
@@ -1,24 +1,36 @@
 .external-modal-button {
     background-color: #481848;
-   border: solid orange;
+    border: solid orange;
     color: whitesmoke;
     border-radius: 30rem;
     margin-top: 8px;
     margin-bottom: 8px;
 }
 
+.modal-title {
+   color: white;
+}
 .modal-background {
     background-color: rgba(0, 0, 139, 0.596);
 }
 
 .close-button {
     color: whitesmoke;
-    border-color: #481848;
+    border-color: orange;
     background-color: #481848;
 }
 
 .internal-modal-button {
-      border: solid orange;
+    border: solid orange;
     color: whitesmoke;
     background-color: #481848;
+}
+
+.modal-header > .close > span {
+    color: red;
+    font-weight: 900;
+}
+.modal-body {
+    color: whitesmoke;
+    font-weight: 450;
 }
