--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ body {
   flex-grow: 1;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   /* align-items: center; */
 }
 
