--- a/src/components/GroupPage/style.css
+++ b/src/components/GroupPage/style.css
@@ -7,6 +7,7 @@
     color: whitesmoke;
     /* display: flex; */
     /* justify-content: center; */
+    margin-top: .01;
     margin-bottom: 32px;
     /* margin-top: 5%; */
     text-align: left;
