--- a/src/components/GroupMap/style.css
+++ b/src/components/GroupMap/style.css
@@ -9,6 +9,14 @@
 	height: 100%;
 }
 
+.map-btns.ol-control button {
+	background-color: #481848;
+	border: solid orange;
+	color: whitesmoke;
+	font-size: large;
+	border-radius: 15px;
+}
+
 #map-progress {
 	position: absolute;
 	top: 0;
