--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -8,13 +8,13 @@
     bottom:0;
     /* left:0; */
     width:100%;
-background-color: #180517a8;
+    background-color: #180517a8;
     border: solid #481848;
     border-radius: 0.3rem;
-    margin-bottom: 8px;
+    margin-bottom: 0px;
     height: 35px;
     justify-content: center;
-    /* display: flex; */
+    display: flex;
     align-items: center;
     color: rgba(245, 245, 245, 0.527);
     margin-top: 50px;
