3 of 5 btn colors changed

--- a/src/components/GroupMap/style.css
+++ b/src/components/GroupMap/style.css
@@ -9,7 +9,11 @@
 	height: 100%;
 }
 
-.map-btns.ol-control button {
+.map-btns.ol-control button,
+.ol-zoomslider-thumb.ol-unselectable,
+.ol-zoom-out,
+.ol-zoom-in
+{
 	background-color: #481848;
 	border: solid orange;
 	color: whitesmoke;
