--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  position: absolute;
+  position: relative;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
