fixed button colors again.

--- a/src/components/ModalDelete/style.css
+++ b/src/components/ModalDelete/style.css
@@ -17,7 +17,7 @@
 }
 
 .cancel-delete-button {
-    color: red;
+    color: whitesmoke;
     border: solid orange;
     background-color: #481848;
 }
