--- a/src/components/ModalAddPerson/style.css
+++ b/src/components/ModalAddPerson/style.css
@@ -18,6 +18,6 @@
 
 .confirm-add-button {
     color: whitesmoke;
-    border-color: #481848;
+    border-color: orange;
     background-color: #481848;
 }
