--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ body {
 
 .content-wrap {
   padding-bottom: 35px;
+  position: relative;
   flex-grow: 1;
   display: flex;
   justify-content: center;
