changed logout button to match other colors

--- a/src/components/ModalLogOut/style.css
+++ b/src/components/ModalLogOut/style.css
@@ -9,3 +9,8 @@
     border-color: orange;
     background-color: #481848;
 }
+.external-log-out-button {
+    /* color: whitesmoke; */
+    border-color: orange;
+    background-color: #481848;
+}
