save before messing with log out btn render

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -36,12 +36,12 @@ header {
     text-align: right;
 }
 
-.header-test {
+/* .header-test {
     border-radius: 0.8rem;
     color: #1890F0;
     border: solid #1890F0;
     background-color: #481848;
-}
+} */
 
 /* #navbar-light{ position: sticky; top: 10px; } */
 
