--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 
 body {
   background-image: url("/images/color-dots-cropped.jpg");
-  /* background-color: #481848; */
+  background-color: #481848;
   background-size: auto;
   background-position: center;
 }
